# media-meta

./: .gitignore  LICENSE  README.md  pyproject.toml
src/media_meta/: __init__.py  extractor.py
tests/: test_extractor.py
