[project]
name = "media-meta"
version = "0.1.0"
description = "A utility to extract metadata from media files."
license = "MIT"
readme = "README.md"
authors = [
    { name = "GoWithitRoger", email = "GoWithitRoger@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "python-dateutil>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/GoWithitRoger/media-meta"
Issues = "https://github.com/GoWithitRoger/media-meta/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]